[gd_scene load_steps=3 format=3 uid="uid://dkhk7ml8tx6a4"]

[ext_resource type="Script" path="res://addons/demo/demo.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://b4eutvmsyh16h" path="res://addons/demo/awesomeness.ogg" id="2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -70.0
offset_right = 56.0
offset_bottom = -56.0
grow_horizontal = 2
pivot_offset = Vector2(54, 7)
text = "Place Holder Text"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -107.0
offset_right = 56.0
offset_bottom = -93.0
grow_horizontal = 2
pivot_offset = Vector2(54, 7)
text = "AdBlocked:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -107.0
offset_right = 132.0
offset_bottom = -93.0
grow_horizontal = 2
pivot_offset = Vector2(54, 7)
text = "false"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = 18.0
grow_horizontal = 2
pivot_offset = Vector2(21, 19)
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Commercial Break"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Shareable URL"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Reward Break"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
